<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detailed_text_view_margin"
        android:text="@string/index_1"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detailed_text_view_margin"
        android:text="@string/name"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_text_view" />

    <EditText
        android:id="@+id/name_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/detailed_text_view_margin"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/name_text_view"
        app:layout_constraintStart_toEndOf="@id/name_text_view"
        tools:text="777" />

    <TextView
        android:id="@+id/surname_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detailed_text_view_margin"
        android:text="@string/surname"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

    <EditText
        android:id="@+id/surname_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/detailed_text_view_margin"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/surname_text_view"
        app:layout_constraintStart_toEndOf="@id/surname_text_view"
        tools:text="777" />

    <TextView
        android:id="@+id/phone_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detailed_text_view_margin"
        android:text="@string/phone"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_text_view" />

    <EditText
        android:id="@+id/phone_edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/detailed_text_view_margin"
        android:autofillHints="phone"
        android:inputType="phone"
        android:textSize="@dimen/details_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_text_view"
        app:layout_constraintStart_toEndOf="@id/phone_text_view"
        tools:text="777" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_edit_view" />

</androidx.constraintlayout.widget.ConstraintLayout>